--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
     <section id="hero" class="clearfix">
     <div class="container" data-aos="fade-up">
 
-      <div class="hero-img" data-aos="zoom-out" data-aos-delay="200">
-        <img src="assets/img/intro-img.svg" alt="" class="img-fluid">
-      </div>
+        <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
+          <img src="assets/img/intro-img.svg" class="img-fluid animated" alt="">
+        </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
         <h2>We provide<br><span>solutions</span><br>for your business!</h2>
