--- a/index.html
+++ b/index.html
@@ -65,23 +65,16 @@
             <ul>
               <li class="drop-down"><a href="#">Event Details</a>
                 <ul>
-                  <li><a href="#">Event 1</a></li>
-                  <li><a href="#">Event 2</a></li>
-                  <li><a href="#">Event 3</a></li>
-                  <li><a href="#">Event 4</a></li>
-                  <li><a href="#">Event 5</a></li>
+                  <li><a href="event1.html">Event 1</a></li>
+                  <li><a href="event1.html">Event 2</a></li>
+                  <li><a href="event1.html">Event 3</a></li>
+                  <li><a href="event1.html">Event 4</a></li>
+                  <li><a href="event1.html">Event 5</a></li>
                 </ul>
-              <li><a href="#">Previous Winners</a></li>
-              <li class="drop-down"><a href="#">Previous Team</a>
-                <ul>
-                  <li><a href="#">2019-2020</a></li>
-                  <li><a href="#">2018-2019</a></li>
-                  <li><a href="#">2017-2018</a></li>
-                  <li><a href="#">2016-2017</a></li>
-                  <li><a href="#">2015-2016</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Newsletter</a></li>
+              <li><a href="Previous_Winners.html">Previous Winners</a></li>
+              <li><a href="Previous_Team.html">Previous Team</a></li>
+
+<!--              <li><a href="#">Newsletter</a></li>-->
 
             </ul>
           </li>
