--- a/Previous_Team.html
+++ b/Previous_Team.html
@@ -91,7 +91,7 @@
     <section id="team" class="section-header-top">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2 margins>Previous Team</h2>
+          <h2>Previous Team</h2>
 
           <h3>Team</h3>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
