--- a/Previous_Winners.html
+++ b/Previous_Winners.html
@@ -90,7 +90,7 @@
     <section id="team" class="section-header-top">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2 margins>Previous Winners</h2>
+          <h2>Previous Winners</h2>
 
           <h3>2020</h3>
         </div>
