--- a/comingsoon.html
+++ b/comingsoon.html
@@ -51,8 +51,8 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#hero">Home</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="index.html#about">About Us</a></li>
           <li><a href="#services">Categories</a></li>
           <li><a href="#portfolio">Gallery</a></li>
           <li><a href="#team">Team</a></li>
@@ -146,12 +146,10 @@
 
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
-<!--
+            <p>Subscribe to our newsletter to stay up to date with all competitions and whereabouts of the club. The newsletter is the best way to get information about participation and voulenteering opportunities for different events.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
--->
           </div>
 
         </div>
@@ -160,7 +158,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>NewBiz</strong>. All Rights Reserved
+        &copy; Copyright <strong>Business Minds</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
